All_Component_DX/force-app/main/default/objects/SM_TA_Picklist_Definition__c/SM_TA_Picklist_Definition__c.object-meta.xml
<CustomObject>
    <description>Object to record picklist values as JSON payload used during technical attribute template definition.</description>
    <label>TA Picklist Definition</label>
    <nameField>
        <displayFormat>TAPL-{00000000}</displayFormat>
        <label>TA Picklist Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TA Picklist Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>