All_Component_DX/force-app/main/default/objects/SM_TA_Picklist_Definition__c/fields/SM_Description__c.field-meta.xml
<CustomField>
    <fullName>SM_Description__c</fullName>
    <description>Picklist Description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>