All_Component_DX/force-app/main/default/objects/SM_TA_Picklist_Definition__c/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <description>Picklist Name</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>