All_Component_DX/force-app/main/default/objects/SM_TA_Picklist_Definition__c/fields/SM_Values__c.field-meta.xml
<CustomField>
    <fullName>SM_Values__c</fullName>
    <description>List of picklist values as JSON Payload with structure same as defined in technical attribute template.</description>
    <label>Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>